--- a/angular.json
+++ b/angular.json
@@ -39,9 +39,13 @@
               }
             ],
             "styles": [
+             "src/styles.css",
+  "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "src/styles.scss"
             ],
-            "scripts": [],
+            "scripts": [ "node_modules/jquery/dist/jquery.min.js",
+  "node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"
+          ],
             "server": "src/main.server.ts",
             "prerender": true,
             "ssr": {
@@ -97,10 +101,8 @@
             "tsConfig": "tsconfig.spec.json",
             "inlineStyleLanguage": "scss",
             "assets": [
-              {
-                "glob": "**/*",
-                "input": "public"
-              }
+           "src/favicon.ico",
+              "src/assets"
             ],
             "styles": [
               "src/styles.scss"
